--- a/src/main/resources/templates/home.html
+++ b/src/main/resources/templates/home.html
@@ -8,7 +8,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <!-- The above 3 meta tags *must* come first in the head; any other head content must come *after* these tags -->
-    <title>Personel Bilgileri</title>
+    <title>Anasayfa</title>
 
     <!-- Bootstrap -->
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap.min.css"
@@ -68,7 +68,7 @@
                 <th>Scopus Atıf Sayısı</th>
                 <th>Uzmanlık Alanı</th>
                 <th>
-                    <a th:href="@{'/updateInformation'}" target="_blank" class="btn btn-primary">
+                    <a th:href="@{'/staffInformation/update'}" target="_blank" class="btn btn-primary">
                         <span class="glyphicon glyphicon-edit" aria-hidden="true"></span>Güncelle</a>
                 </th>
             </tr>
